// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar (1) Should render small size 1`] = `
<span
  className="user-avatar small"
  onClick={[Function]}
  role="none"
  style={
    Object {
      "backgroundImage": "url('https://images.esteem.app/u/good-karma/avatar/medium')",
    }
  }
/>
`;

exports[`UserAvatar (2) Should render normal size 1`] = `
<span
  className="user-avatar normal"
  onClick={[Function]}
  role="none"
  style={
    Object {
      "backgroundImage": "url('https://images.esteem.app/u/good-karma/avatar/medium')",
    }
  }
/>
`;

exports[`UserAvatar (3) Should render medium size 1`] = `
<span
  className="user-avatar medium"
  onClick={[Function]}
  role="none"
  style={
    Object {
      "backgroundImage": "url('https://images.esteem.app/u/good-karma/avatar/medium')",
    }
  }
/>
`;

exports[`UserAvatar (4) Should render large size 1`] = `
<span
  className="user-avatar large"
  onClick={[Function]}
  role="none"
  style={
    Object {
      "backgroundImage": "url('https://images.esteem.app/u/good-karma/avatar/medium')",
    }
  }
/>
`;

exports[`UserAvatar (5) Should render xlarge size 1`] = `
<span
  className="user-avatar xLarge"
  onClick={[Function]}
  role="none"
  style={
    Object {
      "backgroundImage": "url('https://images.esteem.app/u/good-karma/avatar/large')",
    }
  }
/>
`;
